# trace

./: .env.example  .gitignore  Dockerfile  README.md  index.html  inference.py  pyproject.toml  requirements.txt  start.sh  ui.py
docs/: README.md  pitch.md
h/trace/: .gitignore  openenv.yaml  requirements.txt  ui.py
h/trace/docs/: README.md  agent.md  idea.txt
h/trace/tests/: test_api.py  test_env.py  test_graders.py  test_scenarios.py
h/trace/trace/: __init__.py  graders.py  models.py  rewards.py  scenarios.py  simulator.py  utils.py
scripts/: run_benchmark.py
server/: __init__.py  app.py
tests/: __init__.py  test_graders.py  test_rewards.py  test_scenarios.py
trace/: env.py  graders.py  models.py  rewards.py  scenarios.py  simulator.py
