[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trace-env"
version = "0.1.0"
description = "OpenEnv-compatible incident response RL environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rajarshi Datta" }]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openenv>=0.1.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

inference = [
    "openai>=1.0.0",
]

[tool.hatch.version]
path = "trace/__init__.py"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
